<resources>
    <string name="app_name">MaxWayAppClone</string>
    
    <string name="notifications_title">уведомление</string>
    <string name="item_product_add">Добавить</string>
    <string name="profile_title">Профиль</string>
    
    //screen profile strings
    <string name="search_title">Результаты поиска</string>
    <string name="login_text">Войти</string>
    <string name="login_text_text">Авторизуйтесь и начните совершать
выгодные покупки на MaхWау</string>
    <string name="balance_text">Баланс</string>
    <string name="address_text">Мои адреса</string>
    <string name="stock_text">Акции</string>
    <string name="branches_text">Филиалы</string>
    <string name="news_text">Новости</string>
    <string name="vacancies_text">Вакансии</string>
    <string name="gallery_text">Галерея</string>
    <string name="recipes_text">Рецепты</string>
    <string name="lang_text">Язык</string>
    <string name="profile_bottom_text">Политика конфиденциальности. и Публичная оферта</string>
    <string name="profile_bottom_text_dev">Работает нa Delever</string>
    <string name="profile_bottom_text_version">Версия 2.1.29</string>
    <string name="profile_owner_name">name</string>
    <string name="profile_owner_phone">+998900006691</string>

    <string name="phone_number">Номер телефона</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="continue_str">Продолжить</string>

    <string name="verification_code">Код подверждения</string>
    <string name="use_time">Отправить другой код 0:</string>
    <string name="send_again">Отправить другой код</string>
    <string name="wrong_code">Ввен неверный код</string>

    <string name="name_surname">Имя фамилия</string>
    <string name="name_surname_big">Имя Фамилия</string>
    <string name="enter_your_name">Введите ваш имя</string>
    <string name="enter_your_date_of_birth">Введите ваш дата рождения</string>
    <string name="your_date_of_birth">Ваш дата рождения</string>
    <string name="policy_of_max_way_warning">Создавая аккаунт, вы принимаете\nУсловия использования МaxWay</string>
    <string name="apply">Подтвердить</string>

    <string name="try_again">Повторить попытку</string>
    <string name="check_connection_and_try_again">Проверьте соединение и попробуйте снова.</string>
    <string name="no_connection_ethernet">Нет подключения к\nинтернету</string>

<!--    <string name="google_maps_key">AIzaSyDZB9vPpP24Z5zA1s8lYM7bQ9o6vDLsAqw</string>-->
    <string name="delivery">Доставка</string>
    <string name="home">Главная</string>
    <string name="basket">Корзина</string>
    <string name="orders">Заказы</string>
    <string name="profile">Профиль</string>
    <string name="my_orders">Мои заказы</string>
    <string name="current_order">Текущий заказ</string>
    <string name="history">История</string>
    <string name="no_orders">У вас пока нет заказов</string>
    <string name="place_your_first_order">Сделайте первый заказ и насладитесь блюдами от Max Way!</string>
    <string name="make_order">Сделать заказ</string>
    <string name="completed">Завершен</string>
    <string name="cash">Наличные</string>
    <string name="total_amount">Общая сумма</string>
    <string name="reorder">Перезаказать</string>
    <string name="order_status">Статус заказа №</string>
    <string name="order_confirmed">Заказ подтвержден</string>

    <string name="notifications_ads">Акции</string>
    <string name="google_maps_key">ggg</string>
    <string name="search_hint">Найти</string>

    <string name="burgers">Бургеры</string>
    <string name="max_burger">Макс Бургер</string>
    <string name="sum"> сум</string>
    <string name="save_text">Сохранить</string>
    <string name="phone_text">Номер телефона</string>
    <string name="date_text">Дата рождения</string>
    <string name="name_text">Имя</string>
    <string name="profile_dialog_top_text">Изменения данных</string>

    <string name="link_register_login">Нажимя "Продолжить", вы соглощаетесь с\n<a href="https://maxway.uz/ru">Политикой конфиденсиональности</a>, и <a href="https://maxway.uz/ru">Публичной оферты</a></string>
    <string name="link_register_name">Создавая аккаунт, вы принимаете\n<a href="https://maxway.uz/ru">Условия использования</a> Max Way</string>
    <string name="bottom_text">Стоимость</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="log_out_dialog_cancel">Оставить</string>
    <string name="log_out_dialog_log_out">Выйти</string>
    <string name="dialog_log_out_title">Вы хотите выйти из профиля?</string>
    <string name="dialog_order_success_titele">Подтверждение заказа</string>
    <string name="dialog_order_success_about">Ваш заказ подтвержден! Мы уже начали его обработку, информация о доставке появится в ближайшее время.</string>
    <string name="dialog_order_success_btn_text">Вернуться на главную</string>
    <string name="profile_name_text">Пользователь</string>
</resources>