<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/bg_circle_image"
            android:scaleType="centerCrop"
            android:src="@drawable/img_order_success"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/dialog_order_success_titele"
            android:textColor="#222222"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/dialog_order_success_about"
            android:textColor="#777777"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_go_home"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/bg_round_8_stroke_color"
        android:text="@string/dialog_order_success_btn_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</RelativeLayout>