<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_round_16"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_margin="20dp"
    android:gravity="center">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_log_out_title"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_stay"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/log_out_dialog_cancel"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:background="@drawable/bg_drag"
            android:layout_marginEnd="8dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/log_out_dialog_log_out"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:background="@drawable/bg_rounded_12_purple"
            android:layout_marginStart="8dp" />

    </LinearLayout>
</LinearLayout>