<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/profile_screen"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="@color/card_stroke"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="16dp"
		android:orientation="vertical">

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/profile_title"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				android:textColor="@color/black"
				android:textStyle="bold"
				android:layout_marginVertical="18dp"
				android:textSize="30sp" />

			<androidx.appcompat.widget.AppCompatImageView
				android:id="@+id/button_log_out"
				android:layout_width="32dp"
				android:layout_height="32dp"
				android:src="@drawable/ic_logout"
				android:layout_gravity="end"
				android:padding="8dp"
				android:background="?attr/selectableItemBackgroundBorderless"
				android:layout_marginVertical="18dp"
				android:layout_marginEnd="12dp"/>

		</FrameLayout>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<LinearLayout
			android:id="@+id/log_out_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_marginVertical="4dp"
			android:visibility="visible"
			android:background="@drawable/bg_round_16">

			<TextView
				android:layout_width="260dp"
				android:layout_height="wrap_content"
				android:text="@string/login_text_text"
				android:textColor="@color/black"
				android:layout_margin="12dp"
				android:textSize="15sp" />

			<androidx.appcompat.widget.AppCompatButton
				android:id="@+id/button_login"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/login_text"
				android:textColor="@color/white"
				android:layout_marginEnd="5dp"
				android:background="@drawable/bg_rounded_12_purple"/>
		</LinearLayout>

		<FrameLayout
			android:id="@+id/login_in_container"
			android:layout_width="match_parent"
			android:layout_height="75dp"
			android:orientation="horizontal"
			android:layout_marginVertical="4dp"
			android:visibility="gone"
			android:background="@drawable/bg_round_16">

			<TextView
				android:id="@+id/profile_name"
				android:layout_width="270dp"
				android:layout_height="wrap_content"
				android:textColor="@color/black"
				android:layout_marginTop="12dp"
				android:layout_marginStart="12dp"
				android:textSize="20sp"
				android:textStyle="bold"/>

			<TextView
				android:id="@+id/profile_phone"
				android:layout_width="270dp"
				android:layout_height="wrap_content"
				android:layout_gravity="bottom|start"
				android:textColor="@color/dark_grey"
				android:layout_margin="12dp"
				android:textSize="18sp" />

			<androidx.appcompat.widget.AppCompatButton
				android:id="@+id/button_edit"
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:clickable="true"
				android:layout_gravity="center|end"
				android:layout_margin="12dp"
				android:textColor="@color/white"
				android:background="@drawable/ic_edit"/>
		</FrameLayout>
	</FrameLayout>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="70dp"
		android:orientation="horizontal"
		android:layout_marginVertical="4dp"
		android:background="@drawable/bg_round_16">

		<TextView
			android:layout_width="270dp"
			android:layout_height="wrap_content"
			android:text="@string/balance_text"
			android:textColor="@color/text_secondary"
			android:layout_marginStart="12dp"
			android:layout_marginTop="12dp"
			android:textStyle="bold"
			android:textSize="20sp" />
		<TextView
			android:layout_width="270dp"
			android:layout_height="wrap_content"
			android:text="0 cum"
			android:layout_gravity="bottom"
			android:textColor="@color/black"
			android:layout_marginStart="12dp"
			android:layout_marginBottom="12dp"
			android:textStyle="bold"
			android:textSize="18sp" />

		<androidx.appcompat.widget.AppCompatImageView
			android:id="@+id/button_qr_scanner"
			android:layout_width="24dp"
			android:layout_height="24dp"
			android:layout_gravity="center|end"
			android:layout_margin="16dp"
			android:background="@drawable/ic_qr"/>
	</FrameLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_marginVertical="4dp"
		android:background="@drawable/bg_round_16">

		<FrameLayout
			android:id="@+id/button_address"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="2dp"
			android:orientation="horizontal">

			<androidx.appcompat.widget.AppCompatImageView
				android:layout_width="28dp"
				android:layout_height="28dp"
				android:layout_margin="8dp"
				android:src="@drawable/ic_location"
				android:padding="8dp"
				android:background="@drawable/bg_round_8_light_black"/>


			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/address_text"
				android:layout_gravity="center|start"
				android:textSize="16sp"
				android:textStyle="bold"
				android:layout_marginStart="50dp"/>

			<androidx.appcompat.widget.AppCompatButton
				android:layout_width="12dp"
				android:layout_height="12dp"
				android:layout_marginEnd="16dp"
				android:background="@drawable/img_next"
				android:layout_gravity="center|end"/>
		</FrameLayout>


		<FrameLayout
			android:id="@+id/button_stock"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="2dp"
			android:orientation="horizontal">

			<androidx.appcompat.widget.AppCompatImageView
				android:layout_width="28dp"
				android:layout_height="28dp"
				android:layout_margin="8dp"
				android:src="@drawable/ic_stock"
				android:padding="8dp"
				android:background="@drawable/bg_round_8_light_black"/>


			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/stock_text"
				android:layout_gravity="center|start"
				android:textSize="16sp"
				android:textStyle="bold"
				android:layout_marginStart="50dp"/>

			<androidx.appcompat.widget.AppCompatButton
				android:layout_width="12dp"
				android:layout_height="12dp"
				android:layout_marginEnd="16dp"
				android:background="@drawable/img_next"
				android:layout_gravity="center|end"/>
			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@color/light_purple"/>
		</FrameLayout>

		<FrameLayout
			android:id="@+id/button_branches"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="2dp"
			android:orientation="horizontal">
			<ProgressBar
				android:id="@+id/progress"
				android:layout_width="40dp"
				android:layout_height="40dp"
				android:layout_gravity="center"
				app:layout_constraintVertical_bias="0.1"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				android:visibility="visible"
				tools:ignore="MissingConstraints" />

			<androidx.appcompat.widget.AppCompatImageView
				android:layout_width="28dp"
				android:layout_height="28dp"
				android:layout_margin="8dp"
				android:src="@drawable/ic_branches"
				android:padding="8dp"
				android:background="@drawable/bg_round_8_light_black"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/branches_text"
				android:layout_gravity="center|start"
				android:textSize="16sp"
				android:textStyle="bold"
				android:layout_marginStart="50dp"/>

			<androidx.appcompat.widget.AppCompatButton
				android:layout_width="12dp"
				android:layout_height="12dp"
				android:layout_gravity="center|end"
				android:layout_marginEnd="16dp"
				android:background="@drawable/img_next" />
			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@color/light_purple"/>
		</FrameLayout>

		<FrameLayout
			android:id="@+id/button_news"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="2dp"
			android:orientation="horizontal">

			<androidx.appcompat.widget.AppCompatImageView
				android:layout_width="28dp"
				android:layout_height="28dp"
				android:layout_margin="8dp"
				android:src="@drawable/ic_news"
				android:padding="8dp"
				android:background="@drawable/bg_round_8_light_black"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/news_text"
				android:layout_gravity="center|start"
				android:textSize="16sp"
				android:textStyle="bold"
				android:layout_marginStart="50dp"/>

			<androidx.appcompat.widget.AppCompatButton
				android:layout_width="12dp"
				android:layout_height="12dp"
				android:layout_marginEnd="16dp"
				android:background="@drawable/img_next"
				android:layout_gravity="center|end"/>
			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@color/light_purple"/>
		</FrameLayout>

		<FrameLayout
			android:id="@+id/vacancies"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="2dp"
			android:orientation="horizontal">

			<androidx.appcompat.widget.AppCompatImageView
				android:layout_width="28dp"
				android:layout_height="28dp"
				android:layout_margin="8dp"
				android:src="@drawable/ic_vacancies"
				android:padding="8dp"
				android:background="@drawable/bg_round_8_light_black"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/vacancies_text"
				android:layout_gravity="center|start"
				android:textSize="16sp"
				android:textStyle="bold"
				android:layout_marginStart="50dp"/>

			<androidx.appcompat.widget.AppCompatButton
				android:layout_width="12dp"
				android:layout_height="12dp"
				android:layout_marginEnd="16dp"
				android:background="@drawable/img_next"
				android:layout_gravity="center|end"/>
			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@color/light_purple"/>
		</FrameLayout>

		<FrameLayout
			android:id="@+id/button_gallery"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="2dp"
			android:orientation="horizontal">

			<androidx.appcompat.widget.AppCompatImageView
				android:layout_width="28dp"
				android:layout_height="28dp"
				android:layout_margin="8dp"
				android:src="@drawable/ic_gallery"
				android:padding="8dp"
				android:background="@drawable/bg_round_8_light_black"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/gallery_text"
				android:layout_gravity="center|start"
				android:textSize="16sp"
				android:textStyle="bold"
				android:layout_marginStart="50dp"/>

			<androidx.appcompat.widget.AppCompatButton
				android:layout_width="12dp"
				android:layout_height="12dp"
				android:layout_marginEnd="16dp"
				android:background="@drawable/img_next"
				android:layout_gravity="center|end"/>
			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@color/light_purple"/>
		</FrameLayout>

		<FrameLayout
			android:id="@+id/button_recipes"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="2dp"
			android:orientation="horizontal">

			<androidx.appcompat.widget.AppCompatImageView
				android:layout_width="28dp"
				android:layout_height="28dp"
				android:layout_margin="8dp"
				android:src="@drawable/ic_recipe"
				android:padding="8dp"
				android:background="@drawable/bg_round_8_light_black"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/recipes_text"
				android:layout_gravity="center|start"
				android:textSize="16sp"
				android:textStyle="bold"
				android:layout_marginStart="50dp"/>

			<androidx.appcompat.widget.AppCompatButton
				android:layout_width="12dp"
				android:layout_height="12dp"
				android:layout_marginEnd="16dp"
				android:background="@drawable/img_next"
				android:layout_gravity="center|end"/>
			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@color/light_purple"/>
		</FrameLayout>

		<FrameLayout
			android:id="@+id/button_language"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="2dp"
			android:orientation="horizontal">

			<androidx.appcompat.widget.AppCompatImageView
				android:layout_width="28dp"
				android:layout_height="28dp"
				android:layout_margin="8dp"
				android:src="@drawable/ic_lang"
				android:padding="8dp"
				android:background="@drawable/bg_round_8_light_black"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lang_text"
				android:layout_gravity="center|start"
				android:textSize="16sp"
				android:textStyle="bold"
				android:layout_marginStart="50dp"/>

			<androidx.appcompat.widget.AppCompatButton
				android:layout_width="12dp"
				android:layout_height="12dp"
				android:layout_marginEnd="16dp"
				android:background="@drawable/img_next"
				android:layout_gravity="center|end"/>

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@color/light_purple"/>
		</FrameLayout>

	</LinearLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/profile_bottom_text"
		android:textStyle="bold"
		android:textSize="12sp"
		android:layout_marginTop="4dp"
		android:textColor="@color/dark_grey"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/profile_bottom_text_dev"
		android:textStyle="bold"
		android:textSize="12sp"
		android:layout_marginTop="4dp"
		android:textColor="@color/dark_grey"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/profile_bottom_text_version"
		android:textStyle="bold"
		android:textSize="12sp"
		android:layout_marginTop="4dp"
		android:textColor="@color/dark_grey"/>
	</LinearLayout>
</ScrollView>