<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:background="@color/none"
	android:layout_height="match_parent">

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/recyclerView"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:visibility="invisible"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"/>

	<LinearLayout
		android:id="@+id/emptyList"
		android:visibility="invisible"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		android:orientation="vertical"
		android:paddingHorizontal="24dp"
		android:gravity="center">

		<ImageView
			android:layout_width="180dp"
			android:layout_height="180dp"
			android:src="@drawable/empty_cart" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="12dp"
			android:text="@string/no_orders"
			android:textColor="@color/black"
			android:fontFamily="@font/montserrat"
			android:textSize="16sp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/place_your_first_order"
			android:textColor="@color/dark_grey"
			android:gravity="center"
			android:fontFamily="@font/montserrat"
			android:textSize="16sp" />

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/btnAddOrder"
			android:layout_width="170dp"
			android:layout_height="48dp"
			android:background="@drawable/bg_add_order_button"
			android:text="@string/make_order"
			android:textAllCaps="false"
			android:textColor="@color/white"
			android:textSize="16sp"
			android:layout_marginTop="12dp"
			android:fontFamily="@font/montserrat" />
	</LinearLayout>

	<ProgressBar
		android:id="@+id/loadingProgress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:visibility="invisible"
		android:indeterminate="true"
		android:indeterminateTint="@color/yellow"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>